--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/httpstergeek/Module_4b",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "underscore": "^1.8.3"
   }
